--- a/app/src/main/res/layout/activity_customer_car_details.xml
+++ b/app/src/main/res/layout/activity_customer_car_details.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:background="@color/viewBg"
-    tools:context="com.urja.carclinics.CustomerCarDetailsActivity">
+    tools:context="com.urja.carclinics.AddNewTransaction">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
