--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -7,12 +7,6 @@
     android:background="@drawable/app_welcoe_screen"
     tools:context=".SplashScreenActivity">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:background="@drawable/app_logo"
-        android:id="@+id/imageView8"/>
     <ProgressBar
         android:id="@+id/progress"
         android:layout_below="@+id/tv"
@@ -23,5 +17,12 @@
         android:padding="@dimen/activity_vertical_margin"
         android:paddingTop="20dp">
     </ProgressBar>
+
+    <ImageView
+        android:layout_width="125dp"
+        android:layout_height="125dp"
+        android:layout_gravity="center"
+        android:background="@drawable/app_logo"
+        android:id="@+id/imageView8"/>
 
 </FrameLayout>
